--- a/tp2Input/style3.css
+++ b/tp2Input/style3.css
@@ -1,5 +1,8 @@
 body { 
     font-family:  Verdana, sans-serif;
+    background-color:  #D2DC9D;
+    background-image: url(/tp2Input/images/bullseye.png);
+    background-repeat: round;
 }
 h1{ 
     font-family: 'Marko One', serif, Georgia; 
@@ -23,7 +26,11 @@ span.price{
     color: #808080;
 }
 #div1 {
+    background-image: url(/tp2Input/images/purpledot.png);
+    background-repeat: repeat-x;
     text-align: center;
+    background-color: white;
+    opacity: 0.5;
 }
 span.label{
     color: #808080;  
@@ -52,6 +59,10 @@ li.c2{list-style: circle; }
 li.c3{list-style-position: inside;}
 li.c4{ 
     font-size: xx-large;
-    list-style-image: url(/tp2Input/images/bull.PNG);}
+    list-style-image: url(/tp2Input/images/bull.PNG);
+}
 
 
+#appetizers a:link{ color: #993399; }
+#appetizers a:hover{color: #C700F2; background-color: #FFC0CB ; opacity: 1;}
+#appetizers a:visited { color: #937393; }
